# challenge-data-music-catalogs

./: .gitignore  README.md
music-catalogs-classifier/: pyproject.toml
music-catalogs-classifier/music_catalogs_classifier/: chatgpt_code.py  hierachical_transformer.py  main.py  prepare_data.ipynb  reservoir_transformer.py  run_model.ipynb  train_reservoir.ipynb  train_transformer.ipynb  train_transformer_final copy.ipynb  train_transformer_final.ipynb  train_transformer_frequency_fixed.ipynb  train_transformer_only.ipynb  train_transformer_only_categories.ipynb  train_transformer_separate_embedding.ipynb  train_transformer_separate_embedding_using_categories.ipynb  training.py
music-catalogs-classifier/music_catalogs_classifier/old_notebooks/: train_transformer.ipynb  train_transformer_only.ipynb  train_transformer_only_categories.ipynb  train_transformer_separate_embedding.ipynb  train_transformer_separate_embedding_using_categories.ipynb
music-catalogs-classifier/music_catalogs_classifier/web-app/: 0_🏠_Home.py
music-catalogs-classifier/music_catalogs_classifier/web-app/pages/: 1_🎵_Le_Projet.py  2_📊_Résultats.py
