[tool.poetry]
name = "music-catalogs-classifier"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
reservoirpy = "^0.3.12"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
torch = "^2.5.1"
torchviz = "^0.0.3"
streamlit = "^1.41.1"
optuna = "^4.2.0"
optuna-dashboard = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
